--- a/Thuis.css
+++ b/Thuis.css
@@ -1,6 +1,6 @@
 .u-section-1 {
   background-image: none;
-  min-height: 682px;
+  min-height: 1201px;
 }
 
 .u-section-1 .u-shape-1 {
@@ -29,7 +29,7 @@
 
 .u-section-1 .u-text-2 {
   width: 543px;
-  margin: 8px auto -69px;
+  margin: 8px auto 60px;
 }
 
 @media (max-width: 767px) {
@@ -44,11 +44,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 {
-    min-height: 639px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    height: 298px;
+    min-height: 1158px;
   }
 
   .u-section-1 .u-image-1 {
@@ -69,30 +65,20 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 1464px;
+  min-height: 1822px;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-text-1 {
   font-size: 3.75rem;
-  margin: 55px 413px 0 361px;
-}
-
-.u-section-2 .u-list-1 {
-  grid-template-rows: auto;
-  width: 426px;
-  margin: 455px auto 0 18px;
+  width: 675px;
+  margin: 71px auto 0;
 }
 
 .u-section-2 .u-gallery-1 {
-  height: 717px;
-  grid-gap: 17px 17px;
-  width: 1094px;
-  margin: -436px auto 0;
-}
-
-.u-section-2 .u-gallery-inner-1 {
-  grid-template-columns: repeat(3, auto);
-  grid-gap: 17px;
+  height: 606px;
+  margin-bottom: 0;
+  margin-top: 127px;
 }
 
 .u-section-2 .u-carousel-item-1 {
@@ -150,8 +136,7 @@
 }
 
 .u-section-2 .u-carousel-thumbnails-1 {
-  padding-top: 30px;
-  padding-right: 0;
+  padding: 60px 60px 30px;
 }
 
 .u-section-2 .u-carousel-thumbnail-1 {
@@ -164,44 +149,59 @@
   height: 100px;
 }
 
-.u-section-2 .u-carousel-thumbnail-3 {
+.u-section-2 .u-carousel-thumbnail-2 {
   width: 150px;
   height: 100px;
 }
 
-.u-section-2 .u-carousel-thumbnail-4 {
+.u-section-2 .u-carousel-thumbnail-2 {
   width: 150px;
   height: 100px;
 }
 
-.u-section-2 .u-carousel-thumbnail-5 {
+.u-section-2 .u-carousel-thumbnail-2 {
   width: 150px;
   height: 100px;
 }
 
-.u-section-2 .u-carousel-thumbnail-6 {
+.u-section-2 .u-carousel-thumbnail-2 {
   width: 150px;
   height: 100px;
 }
 
 .u-section-2 .u-carousel-control-1 {
   position: absolute;
-  left: 10px;
-  width: 122px;
-  height: 122px;
+  left: 15px;
+  width: 74px;
+  height: 74px;
+  top: 303px;
+  right: auto;
 }
 
 .u-section-2 .u-carousel-control-2 {
   position: absolute;
-  right: 10px;
-  width: 122px;
-  height: 122px;
+  width: 74px;
+  height: 74px;
+  top: 303px;
+  left: auto;
+  right: 15px;
+}
+
+.u-section-2 .u-list-1 {
+  grid-template-rows: auto;
+  width: 426px;
+  margin: -193px auto 0 18px;
+}
+
+.u-section-2 .u-text-2 {
+  font-size: 3.75rem;
+  margin: 286px 247px 0 218px;
 }
 
 .u-section-2 .u-list-2 {
   grid-template-rows: auto;
   width: 1110px;
-  margin: 0 auto 60px;
+  margin: 139px 0 60px auto;
 }
 
 .u-section-2 .u-repeater-1 {
@@ -218,15 +218,16 @@
   height: 309px;
   width: 174px;
   transition-duration: 0.5s;
-  margin: 45px auto 0 70px;
-}
-
-.u-section-2 .u-text-2 {
-  margin: 8px auto 0 16px;
+  margin: 14px auto 0;
 }
 
 .u-section-2 .u-text-3 {
-  margin: 0 16px;
+  font-weight: 700;
+  margin: 6px auto 0 16px;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 0 26px -150px 6px;
 }
 
 .u-section-2 .u-container-layout-2 {
@@ -237,15 +238,16 @@
   height: 309px;
   width: 174px;
   transition-duration: 0.5s;
-  margin: 45px auto 0 70px;
-}
-
-.u-section-2 .u-text-4 {
-  margin: 8px auto 0 16px;
+  margin: 14px auto 0;
 }
 
 .u-section-2 .u-text-5 {
-  margin: 0 16px;
+  font-weight: 700;
+  margin: 6px auto 0 16px;
+}
+
+.u-section-2 .u-text-6 {
+  margin: 0 26px -25px 6px;
 }
 
 .u-section-2 .u-list-item-3 {
@@ -260,25 +262,26 @@
   height: 309px;
   width: 174px;
   transition-duration: 0.5s;
-  margin: 45px auto 0 70px;
-}
-
-.u-section-2 .u-text-6 {
-  margin: 8px auto 0 16px;
+  margin: 14px auto 0;
 }
 
 .u-section-2 .u-text-7 {
-  margin: 0 16px;
+  font-weight: 700;
+  margin: 6px auto 0 16px;
+}
+
+.u-section-2 .u-text-8 {
+  margin: 0 26px 0 6px;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-text-1 {
-    margin-right: 313px;
-    margin-left: 261px;
+    width: 366px;
+    font-weight: normal;
   }
 
   .u-section-2 .u-gallery-1 {
-    width: 940px;
+    margin-top: 136px;
   }
 
   .u-section-2 .u-carousel-thumbnail-1 {
@@ -291,28 +294,41 @@
     height: 91px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-3 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 136px;
     height: 91px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-4 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 136px;
     height: 91px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-5 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 136px;
     height: 91px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-6 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 136px;
     height: 91px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-top: 29px;
+  }
+
+  .u-section-2 .u-text-2 {
+    font-weight: normal;
+    margin-top: 303px;
+    margin-right: 147px;
+    margin-left: 118px;
   }
 
   .u-section-2 .u-list-2 {
     width: 940px;
+    margin-top: 122px;
+    margin-bottom: 0;
   }
 
   .u-section-2 .u-repeater-1 {
@@ -331,12 +347,12 @@
     margin-top: 36px;
   }
 
-  .u-section-2 .u-text-2 {
+  .u-section-2 .u-text-3 {
     margin-top: 0;
     margin-right: 25px;
   }
 
-  .u-section-2 .u-text-3 {
+  .u-section-2 .u-text-4 {
     margin-left: 9px;
     margin-right: 9px;
   }
@@ -346,7 +362,8 @@
     padding-right: 5px;
   }
 
-  .u-section-2 .u-text-5 {
+  .u-section-2 .u-text-6 {
+    margin-left: 0;
     margin-right: 0;
   }
 
@@ -361,35 +378,20 @@
     margin-top: 36px;
   }
 
-  .u-section-2 .u-text-6 {
+  .u-section-2 .u-text-7 {
     margin-top: 0;
     margin-right: 25px;
   }
 
-  .u-section-2 .u-text-7 {
+  .u-section-2 .u-text-8 {
     margin-left: 9px;
     margin-right: 9px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-text-1 {
-    margin-right: 203px;
-    margin-left: 151px;
-  }
-
-  .u-section-2 .u-list-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
   .u-section-2 .u-gallery-1 {
-    width: 720px;
-  }
-
-  .u-section-2 .u-gallery-inner-1 {
-    grid-template-columns: repeat(2, auto);
+    margin-top: 645px;
   }
 
   .u-section-2 .u-carousel-thumbnail-1 {
@@ -402,28 +404,42 @@
     height: 66px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-3 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 99px;
     height: 66px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-4 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 99px;
     height: 66px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-5 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 99px;
     height: 66px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-6 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 99px;
     height: 66px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-top: -480px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 591px;
+    margin-right: 37px;
+    margin-left: 8px;
   }
 
   .u-section-2 .u-list-2 {
     width: 720px;
+    margin-top: -363px;
   }
 
   .u-section-2 .u-repeater-1 {
@@ -435,8 +451,8 @@
     height: 407px;
   }
 
-  .u-section-2 .u-text-3 {
-    margin-left: 16px;
+  .u-section-2 .u-text-4 {
+    margin-left: 0;
     margin-right: 0;
   }
 
@@ -444,24 +460,15 @@
     height: 407px;
   }
 
-  .u-section-2 .u-text-7 {
-    margin-left: 16px;
+  .u-section-2 .u-text-8 {
+    margin-left: 0;
     margin-right: 0;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-text-1 {
-    margin-right: 113px;
-    margin-left: 61px;
-  }
-
   .u-section-2 .u-gallery-1 {
-    width: 540px;
-  }
-
-  .u-section-2 .u-gallery-inner-1 {
-    grid-template-columns: repeat(1, auto);
+    margin-top: 1048px;
   }
 
   .u-section-2 .u-carousel-thumbnail-1 {
@@ -474,28 +481,42 @@
     height: 46px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-3 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 69px;
     height: 46px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-4 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 69px;
     height: 46px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-5 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 69px;
     height: 46px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-6 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 69px;
     height: 46px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-top: -884px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 875px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-2 .u-list-2 {
     width: 540px;
+    margin-top: -647px;
   }
 
   .u-section-2 .u-repeater-1 {
@@ -506,12 +527,11 @@
 @media (max-width: 575px) {
   .u-section-2 .u-text-1 {
     font-size: 1.5rem;
-    margin-right: 0;
-    margin-left: 0;
+    width: 340px;
   }
 
   .u-section-2 .u-gallery-1 {
-    width: 340px;
+    margin-top: 1049px;
   }
 
   .u-section-2 .u-carousel-thumbnail-1 {
@@ -524,35 +544,47 @@
     height: 24px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-3 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 36px;
     height: 24px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-4 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 36px;
     height: 24px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-5 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 36px;
     height: 24px;
   }
 
-  .u-section-2 .u-carousel-thumbnail-6 {
+  .u-section-2 .u-carousel-thumbnail-2 {
     width: 36px;
     height: 24px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-top: -885px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 901px;
   }
 
   .u-section-2 .u-list-2 {
     width: 340px;
+    margin-top: -698px;
   }
 
-  .u-section-2 .u-text-3 {
+  .u-section-2 .u-text-4 {
     margin-right: 16px;
   }
 
-  .u-section-2 .u-text-7 {
+  .u-section-2 .u-text-8 {
     margin-right: 16px;
   }
 }
@@ -617,18 +649,18 @@
   border-style: solid !important;
 }
 
-.u-section-2 .u-back-image-1:not([data-block-selected]) {
+.u-block-a4c3-74:not([data-block-selected]) {
   transition-property: color, background-color, background-image, border-width, box-shadow, text-shadow, opacity, border-radius, border-color, font-size, font-style, font-weight, font-weight, text-decoration, letter-spacing, transform !important;
 }
 
-.u-section-2 .u-back-image-1:not([data-block-selected]):hover {
+.u-block-a4c3-74:not([data-block-selected]):hover {
   border-color: !important;
   border-style: solid !important;
   border-width: 0px !important;
   opacity: 1 !important;
 }
 
-.u-section-2 .u-back-image-1:not([data-block-selected]) {
+.u-block-a4c3-74:not([data-block-selected]) {
   border-style: solid !important;
   border-width: 0px !important;
 }
@@ -691,7 +723,7 @@
 
 .u-section-3 .u-text-1 {
   font-size: 3.75rem;
-  font-weight: normal;
+  font-weight: 700;
   margin: 42px auto 0;
 }
 
