--- a/nicepage.css
+++ b/nicepage.css
@@ -34625,68 +34625,50 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 96px;
-}
-
-.u-header .u-image-1 {
-  margin: 22px auto 0 0;
+  min-height: 92px;
 }
 
 .u-header .u-menu-1 {
-  margin: -27px 244px -961px auto;
+  margin: 31px 70px 0 auto;
 }
 
 .u-header .u-nav-1 {
   font-size: 1rem;
   letter-spacing: 0px;
   background-image: none;
-  font-weight: 700;
   text-transform: uppercase;
+  font-weight: 700;
 }
 
 .u-header .u-nav-2 {
-  font-size: 1rem;
-  letter-spacing: 0px;
-}
-
-.u-header .u-nav-3 {
   font-size: 1.25rem;
 }
 
-.u-header .u-nav-4 {
-  font-size: 1rem;
-  letter-spacing: 0px;
+.u-header .u-image-1 {
+  width: 54px;
+  height: 54px;
+  margin: -54px auto 23px 0;
 }
 @media (max-width: 1199px) {
   .u-header .u-menu-1 {
-    width: auto;
-    margin-top: -33px;
-    margin-right: 124px;
-    margin-bottom: 29px;
+    margin-right: 70px;
+  }
+
+  .u-header .u-image-1 {
+    width: 54px;
+    height: 54px;
+    margin-top: -54px;
   }
 }
 
-@media (max-width: 767px) {
-  .u-header .u-menu-1 {
-    margin: 20px auto -961px 0;
-  }
-}
-@media (max-width: 575px) {
-  .u-header .u-menu-1 {
-    margin-bottom: 29px;
-  }
-}
+
+
 .u-footer {
   background-image: none;
 }
 
 .u-footer .u-sheet-1 {
   min-height: 120px;
-}
-
-.u-footer .u-text-1 {
-  width: 417px;
-  margin: 49px auto;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
@@ -34706,10 +34688,6 @@ a.u-link.u-text-hover-grey-90:hover {
 @media (max-width: 575px) {
   .u-footer .u-sheet-1 {
     min-height: 36px;
-  }
-
-  .u-footer .u-text-1 {
-    width: 340px;
   }
 }
 
